--- a/style.css
+++ b/style.css
@@ -1,20 +1,65 @@
+body {
+    font-family: 'Open Sans', sans-serif;
+}
 
 input[type=text] {
     display: inline;
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 60px;
     font-size: 40px;
     text-align: center;
-}
-
-input[type=text]:read-only {
-    background-color: lightgray;
+    border: 2px solid black;
+    text-transform: uppercase;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    margin: 0 5px;
 }
 
 input[type=text]:focus {
     caret-color: transparent;
 }
+.comp {
+    background-color: lightgray;
+}
+
+#gameSpace {
+    display: grid;
+    grid-template-rows: 100px 4fr 1fr;
+    grid-template-columns: 1fr 4fr 1fr;
+    justify-items: center;
+}
 
 #message {
-    height: 100px;
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+}
+
+#word {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#userPoints {
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+    font-size: 36px;
+    font-weight: 500;
+}
+
+#compPoints {
+    grid-row: 2 / 3;
+    grid-column: 3 / 4;
+    font-size: 36px;
+    font-weight: 500;
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
 }
