--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+header {
+    display: flex;
+    justify-content: center;
+}
+
+h1 {
+    font-size: 48px;
+}
+
 input[type=text] {
     display: inline;
     width: 60px;
@@ -22,9 +31,13 @@ input[type=text]:focus {
     background-color: lightgray;
 }
 
+#checkers {
+    color: gray;
+}
+
 #gameSpace {
     display: grid;
-    grid-template-rows: 100px 4fr 1fr;
+    grid-template-rows: 100px 2fr 2fr 1fr;
     grid-template-columns: 1fr 4fr 1fr;
     justify-items: center;
 }
@@ -44,22 +57,23 @@ input[type=text]:focus {
     justify-content: space-evenly;
 }
 
-#userPoints {
+#playAgain {
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
+}
+
+#userPointsDiv {
     grid-row: 2 / 3;
     grid-column: 1 / 2;
     font-size: 36px;
     font-weight: 500;
+    text-align: center;
 }
 
-#compPoints {
+#compPointsDiv {
     grid-row: 2 / 3;
     grid-column: 3 / 4;
     font-size: 36px;
     font-weight: 500;
-}
-
-header {
-    display: flex;
-    justify-content: center;
-    font-size: 30px;
+    text-align: center;
 }
