--- a/style.css
+++ b/style.css
@@ -3,12 +3,20 @@ body {
 }
 
 header {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-rows: 1fr;
+    /* background-color: deepskyblue; */
 }
 
 h1 {
     font-size: 48px;
+    grid-column: 2 / 3;
+    justify-self: center;
+}
+
+h2 {
+    display: block;
 }
 
 input[type=text] {
@@ -41,25 +49,86 @@ button {
     border-radius: 12px;
     border-style: none;
     box-shadow: 5px 5px 10px gray;
+    cursor: pointer;
+}
+
+button:hover {
+    box-shadow: 7px 7px 12px gray;
 }
 
 button:active {
     box-shadow: 2px 2px 5px gray;
 }
 
-.button-27:disabled {
-  pointer-events: none;
+/* CSS SWITCH TUTORIAL FROM W3WCHOOLS */
+/* https://www.w3schools.com/howto/howto_css_switch.asp */
+
+.switch {
+position: relative;
+display: inline-block;
+width: 60px;
+height: 34px;
 }
 
-.button-27:hover {
-  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
-  transform: translateY(-2px);
+.switch input {
+opacity: 0;
+width: 0;
+height: 0;
 }
 
-.button-27:active {
-  box-shadow: none;
-  transform: translateY(0);
+/* The slider */
+.slider {
+position: absolute; /* keeps the span in position around the switch */
+cursor: pointer;
+top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+background-color: #ccc; /* makes the background of the slider grey */
+-webkit-transition: .4s;
+transition: .4s; /* runs the slide animation over .4 seconds */
 }
+
+
+.slider:before {
+position: absolute;
+content: "";
+height: 26px;
+width: 26px;
+left: 4px;
+bottom: 4px;
+background-color: white;
+-webkit-transition: .4s;
+transition: .4s;
+}
+
+/* plus selector is for elements immediately after but not inside */
+/* so it is targeting the .slider class, but only when the input before it has been checked */
+input:checked + .slider {
+background-color: #2C3B69;
+}
+
+/* slight shadow to give it some depth */
+input:focus + .slider {
+box-shadow: 0 0 1px #2C3B69;
+}
+
+/* moves the slider over */
+input:checked + .slider:before {
+-webkit-transform: translateX(26px);
+-ms-transform: translateX(26px);
+transform: translateX(26px);
+}
+
+.slider.round {
+border-radius: 34px;
+}
+
+.slider.round:before {
+border-radius: 50%;
+}
+
+/* W3SCHOOLS TUTORIAL END */
 
 .compTurn {
     background-color: lightgray;
@@ -89,6 +158,14 @@ button:active {
     justify-items: center;
 }
 
+#difficulty {
+    grid-row: 1 / 2;
+    grid-column: 3 / 4;
+    text-align: center;
+    align-self: end;
+    color: gray;
+}
+
 #wordsLeft {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
@@ -100,8 +177,10 @@ button:active {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     font-size: 36px;
+    /* background-color: aqua; */
 }
 
 #word {
@@ -109,6 +188,7 @@ button:active {
     grid-column: 2 / 3;
     display: flex;
     justify-content: space-evenly;
+    /* background-color: darksalmon; */
 }
 
 #options {
@@ -122,6 +202,7 @@ button:active {
     font-size: 36px;
     font-weight: 500;
     text-align: center;
+    /* background-color: aquamarine; */
 }
 
 #compPointsDiv {
@@ -130,4 +211,5 @@ button:active {
     font-size: 36px;
     font-weight: 500;
     text-align: center;
+    /* background-color: darkorchid; */
 }
