--- a/style.css
+++ b/style.css
@@ -159,9 +159,15 @@ border-radius: 50%;
 
 }
 
-#pointsToWin {
+#scoreboard {
     grid-column: 1 / 2;
     justify-self: center;
+    text-align: center;
+}
+
+#pointsToWin {
+    font-size: 30px;
+    font-family: 'Open Sans', sans-serif;
 }
 
 #checkers {
@@ -210,7 +216,7 @@ border-radius: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 36px;
+    font-size: 30px;
     /* background-color: aqua; */
 }
 
