--- a/style.css
+++ b/style.css
@@ -201,12 +201,16 @@ border-radius: 50%;
 }
 
 #wordsLeft {
-    margin: 10px 0;
+
     grid-row: 1 / 2;
     grid-column: 2 / 3;
     display: flex;
     justify-content: center;
     align-self: start;
+}
+
+#wordsLeft > p {
+    margin: 0 0 25px 0;
 }
 
 #message {
@@ -219,6 +223,7 @@ border-radius: 50%;
     font-size: 30px;
     /* background-color: aqua; */
 }
+
 
 #word {
     grid-row: 2 / 3;
